add more Mini translations

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -1054,8 +1054,9 @@ common compounds that are used in day-to-day speech.
     <p>sîkîn buswêlin&emsp;<strong>rite:</strong> <em>rite, ceremony, ceremonial</em></p>
     <p>buswêlin&emsp;<strong>rite:</strong> <em>ceremonial</em></p>
     <p>xûto&emsp;<strong>riva:</strong> <em>river, stream</em></p>
-<p>TBD&emsp;<strong>roba:</strong> <em>dress, robe</em></p>
-<p>TBD&emsp;<strong>robare:</strong> <em>steal, theft</em></p>
+    <p>ôntôn yê solîlo mûlû&emsp;<strong>roba:</strong> <em>dress, robe</em></p>
+    <p>xe gomî bi dês fôlun&emsp;<strong>robare¹:</strong> <em>steal</em></p>
+    <p>kon gomî dês fôlun&emsp;<strong>robare²:</strong> <em>theft</em></p>
     <p>culono foko yoldûn&emsp;<strong>roboto:</strong> <em>robot</em></p>
     <p>cûî cênbô&emsp;<strong>roden:</strong> <em>rodent (non-mouse), squirrel, beaver</em></p>
     <p>sôlû&emsp;<strong>roga:</strong> <em>ask, question</em></p>
@@ -1072,7 +1073,7 @@ common compounds that are used in day-to-day speech.
     <p>hûnsik&emsp;<strong>ruja:</strong> <em>red</em></p>
     <p>cûonwun&emsp;<strong>rumora:</strong> <em>gossip, rumor, rumored</em></p>
     <p>xe onkûol&emsp;<strong>runguma:</strong> <em>hug, embrace</em></p>
-<p>TBD&emsp;<strong>rusa:</strong> <em>deer</em></p>
+    <p>lûîcû&emsp;<strong>rusa:</strong> <em>deer</em></p>
     <p>cûlcî&emsp;<strong>ruse¹:</strong> <em>trick, hoax, ruse, fraud, scam</em></p>
     <p>fonfûk&emsp;<strong>ruse²:</strong> <em>tricky</em></p>
     <p>ênbukun&emsp;<strong>ruto:</strong> <em>burp, belch</em></p>
@@ -1090,11 +1091,11 @@ common compounds that are used in day-to-day speech.
     <p>boîfôn yê kukwon woyû&emsp;<strong>saliva²:</strong> <em>expectorate</em></p>
     <p>xôboî&emsp;<strong>salo¹:</strong> <em>salt, salty, seasoning</em></p>
     <p>kîûngô&emsp;<strong>salo²:</strong> <em>seasoning</em></p>
-<p>TBD&emsp;<strong>salon:</strong> <em>salon, parlor</em></p>
+    <p>kûncîen kon monodo&emsp;<strong>salon:</strong> <em>salon, parlor</em></p>
     <p>bîolî&emsp;<strong>salu¹:</strong> <em>hello, goodbye</em></p>
     <p>xe monodo ônî gîk&emsp;<strong>salu²:</strong> <em>greet</em></p>
     <p>kon monodo ônî gîk&emsp;<strong>salu³:</strong> <em>greeting</em></p>
-<p>TBD&emsp;<strong>sando:</strong> <em>sandwich</em></p>
+    <p>mokon xe gitno bîek&emsp;<strong>sando:</strong> <em>sandwich</em></p>
     <p>luhû&emsp;<strong>sange¹:</strong> <em>blood</em></p>
     <p>xe boîfôn luhû&emsp;<strong>sange²:</strong> <em>bleed</em></p>
     <p>sohoû&emsp;<strong>sano¹:</strong> <em>health, healthy</em></p>
@@ -1147,13 +1148,13 @@ common compounds that are used in day-to-day speech.
     <p>zênsî&emsp;<strong>sesi²:</strong> <em>sexy</em></p>
     <p>xe li ûnîdû bi zênsî&emsp;<strong>sesi³:</strong> <em>copulate</em></p>
     <p>hênêlô&emsp;<strong>sesi⁴:</strong> <em>gender</em></p>
-<p>TBD&emsp;<strong>sete:</strong> <em>thirst, thirsty</em></p>
+    <p>fôlun êto xîmu&emsp;<strong>sete:</strong> <em>thirst, thirsty</em></p>
     <p>xêtî&emsp;<strong>seven:</strong> <em>seven</em></p>
     <p>xîdêtlî&emsp;<strong>severe:</strong> <em>severe, strict</em></p>
     <p>siskin&emsp;<strong>sibi:</strong> <em>sibling, brother, sister</em></p>
     <p>xîûlo&emsp;<strong>sibila:</strong> <em>whistle, hiss, fizzle, whiz, zip</em></p>
     <p>noûku&emsp;<strong>siensa:</strong> <em>science, scientific, -ology</em></p>
-<p>TBD&emsp;<strong>sigaro:</strong> <em>cigar, cigarette</em></p>
+    <p>nûyo hôncôû yê kon îskô wôlik&emsp;<strong>sigaro:</strong> <em>cigar, cigarette</em></p>
     <p>uklo&emsp;<strong>sige:</strong> <em>next, follow, subsequent, succeeding</em></p>
     <p>ûlonfû&emsp;<strong>silaba:</strong> <em>syllable</em></p>
     <p>ûlôgun dûsul foko tîkêl yê wîlûwo êto&emsp;<strong>silara:</strong> <em>silver, silvery</em></p>
@@ -1187,7 +1188,7 @@ common compounds that are used in day-to-day speech.
     <p>xe li êo ofînê&emsp;<strong>sivi⁴:</strong> <em>civilize</em></p>
     <p>lôîcôk&emsp;<strong>so:</strong> <em>so, such</em></p>
     <p>sityo yofûk&emsp;<strong>sofa:</strong> <em>sofa</em></p>
-<p>TBD&emsp;<strong>sofio:</strong> <em>blow, inflate, puff</em></p>
+    <p>xe li êo gelmis tô woyû&emsp;<strong>sofio:</strong> <em>blow, inflate, puff</em></p>
     <p>ôntôn wowoê&emsp;<strong>soke:</strong> <em>sock, stocking</em></p>
     <p>gêkô&emsp;<strong>soli¹:</strong> <em>soil, dirt</em></p>
     <p>lîsmu&emsp;<strong>soli²:</strong> <em>clay</em></p>
@@ -1210,7 +1211,7 @@ common compounds that are used in day-to-day speech.
     <p>kotonhon&emsp;<strong>subita¹:</strong> <em>sudden, suddenly, abrupt</em></p>
     <p>xe li êo gô bi kotonhon&emsp;<strong>subita²:</strong> <em>to precipitate</em></p>
     <p>zonûbî&emsp;<strong>sude:</strong> <em>south</em></p>
-<p>TBD&emsp;<strong>sue:</strong> <em>sew, stich, seam</em></p>
+    <p>zohît&emsp;<strong>sue:</strong> <em>sew, stich, seam</em></p>
     <p>zôtêstô&emsp;<strong>sufi¹:</strong> <em>enough, sufficient</em></p>
     <p>xe li zôtêstô&emsp;<strong>sufi²:</strong> <em>suffice</em></p>
     <p>xe bêsnêhot&emsp;<strong>sujesi:</strong> <em>suggest</em></p>
