Add more Mini translations and fixes

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -405,7 +405,7 @@ common compounds that are used in day-to-day speech.
     <p>gûmî&emsp;<strong>goma:</strong> <em>rubber, rubbery</em></p>
     <p>xifon&emsp;<strong>gomba:</strong> <em>mushroom</em></p>
     <p>mîkdol cûtî yê fecko&emsp;<strong>gota¹:</strong> <em>drop</em></p>
-    <p>uyo gundolê cûtî<strong>gota²:</strong> <em>bead</em></p>
+    <p>uyo gundolê cûtî&emsp;<strong>gota²:</strong> <em>bead</em></p>
     <p>êto yê xûnyu xîncûon&emsp;<strong>gota³:</strong> <em>blob</em></p>
     <p>tubô&emsp;<strong>gota⁴:</strong> <em>spot</em></p>
     <p>mîkdol cûty yê fecko et zîgîl&emsp;<strong>gota⁵:</strong> <em>drip</em></p>
@@ -616,7 +616,7 @@ common compounds that are used in day-to-day speech.
     <p>cûlosun&emsp;<strong>lase¹:</strong> <em>let, allow, licit</em></p>
     <p>cûlosun centik&emsp;<strong>lase²:</strong> <em>license</em></p>
     <p>kon cûlosun&emsp;<strong>lase³:</strong> <em>permission</em></p>
-    <p>legêvû&emsp;<strong>lasi:</strong> <em>lazy, indolence, inactivity</em></p>
+    <p>legêfû&emsp;<strong>lasi:</strong> <em>lazy, indolence, inactivity</em></p>
     <p>nulto&emsp;<strong>lati:</strong> <em>wide, broad, width, latitude</em></p>
     <p>dibo wutun yê nomû cûxîen&emsp;<strong>kuve:</strong> <em>barrel</em></p>
     <p>xûsten&emsp;<strong>lava:</strong> <em>wash</em></p>
@@ -1123,7 +1123,7 @@ common compounds that are used in day-to-day speech.
     <p>dês mûlû&emsp;<strong>semi³:</strong> <em>incompletely</em></p>
     <p>kûnbî&emsp;<strong>sena:</strong> <em>scene, stage</em></p>
     <p>xe lufono&emsp;<strong>sende:</strong> <em>send, transmit, dispatch</em></p>
-    <p>xe hopiyô&emsp;<strong>sende:</strong> <em>broadcast, a post</em></p>
+    <p>xe hobîyô&emsp;<strong>sende:</strong> <em>broadcast, a post</em></p>
     <p>kolowu&emsp;<strong>seni:</strong> <em>art, artistic</em></p>
     <p>golun&emsp;<strong>senjore:</strong> <em>mr., ms., sir, madam</em></p>
     <p>helgo&emsp;<strong>senjore:</strong> <em>lord, master</em></p>
@@ -1237,7 +1237,7 @@ common compounds that are used in day-to-day speech.
     <p>gufis&emsp;<strong>sure:</strong> <em>certain, sure, certainty</em></p>
     <p>xe kôto bi homûs&emsp;<strong>susura:</strong> <em>whisper, rustle, murmur</em></p>
     <p>hoxobê&emsp;<strong>taba:</strong> <em>board, plank, beam, slat</em></p>
-<p>TBD&emsp;<strong>tabu:</strong> <em>taboo, forbid, forbidden</em></p>
+<p>k&emsp;<strong>tabu:</strong> <em>taboo, forbid, forbidden</em></p>
     <p>mûun&emsp;<strong>tadi:</strong> <em>late, tardy, delay</em></p>
     <p>soden&emsp;<strong>talon:</strong> <em>heel</em></p>
     <p>yôn konwo în xobo&emsp;<strong>tambo:</strong> <em>drum</em></p>
@@ -1272,20 +1272,24 @@ common compounds that are used in day-to-day speech.
     <p>în môtsilê&emsp;<strong>tese²:</strong> <em>woven</em></p>
     <p>tetêk&emsp;<strong>teta:</strong> <em>breast, tit</em></p>
     <p>siskin motûo&emsp;<strong>tie:</strong> <em>uncle, aunt</em></p>
-<p>TBD&emsp;<strong>tila¹:</strong> <em>until, till</em></p>
-<p>TBD&emsp;<strong>tila²:</strong> <em>up to</em></p>
-<p>TBD&emsp;<strong>tila¹:</strong> <em>approach</em></p>
-<p>TBD&emsp;<strong>tila²:</strong> <em>reach</em></p>
+    <p>mût&emsp;<strong>tila¹:</strong> <em>until, till</em></p>
+    <p>êto xe misli&emsp;<strong>tila²:</strong> <em>up to</em></p>
+    <p>xe li gîk&emsp;<strong>tila³:</strong> <em>approach</em></p>
+    <p>xe dî gelmis&emsp;<strong>tila⁴:</strong> <em>reach</em></p>
     <p>bûîhî&emsp;<strong>timi:</strong> <em>timid, shy, coy, reserved</em></p>
-<p>TBD&emsp;<strong>tin:</strong> <em>tin, can</em></p>
+    <p>ûlôgun hûwuncul fos kôî dî êo gelmis mût doî&emsp;<strong>tin¹:</strong> <em>tin</em></p>
+    <p>dibo ûlôgun în besol&emsp;<strong>tin²:</strong> <em>can</em></p>
     <p>iwotê&emsp;<strong>tingi:</strong> <em>high, tall, height</em></p>
     <p>xûk longi&emsp;<strong>tinta:</strong> <em>tint, ink, hue</em></p>
     <p>niwos tohilôk&emsp;<strong>tipi:</strong> <em>tent, teepee, hut</em></p>
     <p>xûk&emsp;<strong>tipo:</strong> <em>type, quality, kind, typical</em></p>
-<p>TBD&emsp;<strong>tira:</strong> <em>pull, tug</em></p>
+    <p>xe cîhun&emsp;<strong>tira:</strong> <em>pull, tug</em></p>
     <p>non sôndonôs&emsp;<strong>tivi:</strong> <em>TV, television</em></p>
-<p>TBD&emsp;<strong>tobako:</strong> <em>tobacco</em></p>
-<p>TBD&emsp;<strong>toilete:</strong> <em>toilet, urinal, restroom, WC, use bathroom</em></p>
+    <p>hôncôû yê kon îskô wôlik&emsp;<strong>tobako:</strong> <em>tobacco</em></p>
+    <p>sityo yê hûlodêk umo&emsp;<strong>toilete¹:</strong> <em>toilet</em></p>
+    <p>sityo yê fecko hûlodêk umo&emsp;<strong>toilete²:</strong> <em>urinal</em></p>
+    <p>kûncîen yê kon mûfêû umo&emsp;<strong>toilete³:</strong> <em>restroom, WC</em></p>
+    <p>xe yôn kûncîen yê kon mûfêû umo&emsp;<strong>toilete⁴:</strong> <em>use bathroom</em></p>
     <p>xe li kûonlôn&emsp;<strong>tolera¹:</strong> <em>tolerate</em></p>
     <p>kon kûonlôn&emsp;<strong>tolera²:</strong> <em>tolerance</em></p>
     <p>kûonlôn&emsp;<strong>tolera³:</strong> <em>tolerant</em></p>
@@ -1333,8 +1337,12 @@ common compounds that are used in day-to-day speech.
     <p>konbokbo&emsp;<strong>univesa:</strong> <em>universal</em></p>
     <p>kukwon kon lôzîc&emsp;<strong>utero:</strong> <em>womb, uterus</em></p>
     <p>xe tuluti bi hoôs&emsp;<strong>vaga:</strong> <em>wander, roam, rove</em></p>
-<p>TBD&emsp;<strong>vagen:</strong> <em>wagon, van, cart, bus, truck</em></p>
-<p>TBD&emsp;<strong>vakansa¹:</strong> <em>vacation</em></p>
+    <p>oûtô yê cîhun kûdu&emsp;<strong>vagen¹:</strong> <em>wagon</em></p>
+    <p>oûtô hondon&emsp;<strong>vagen²:</strong> <em>van</em></p>
+    <p>oûtô în cîhun&emsp;<strong>vagen³:</strong> <em>cart</em></p>
+    <p>oûtô kîldo fîmôsyôs&emsp;<strong>vagen⁴:</strong> <em>bus</em></p>
+    <p>oûtô kon okôt&emsp;<strong>vagen⁵:</strong> <em>truck</em></p>
+    <p>wokût yê cok kon wêloi&emsp;<strong>vakansa¹:</strong> <em>vacation</em></p>
     <p>lono kon kôndodû&emsp;<strong>vakansa²:</strong> <em>holiday</em></p>
     <p>xe li bostofîs&emsp;<strong>vakili:</strong> <em>represent, stand for</em></p>
     <p>bostofîs&emsp;<strong>vakili:</strong> <em>representative, agent, envoy</em></p>
@@ -1342,7 +1350,7 @@ common compounds that are used in day-to-day speech.
     <p>kôsmô&emsp;<strong>vaku²:</strong> <em>outer space</em></p>
     <p>fenûo sêl&emsp;<strong>vali:</strong> <em>valley</em></p>
     <p>wîlûwo&emsp;<strong>valu:</strong> <em>value, worth</em></p>
-<p>TBD&emsp;<strong>vanila:</strong> <em>vanilla</em></p>
+    <p>kîûngô yê oûdî cûtî în gûwolo yê kûôxi yê bîômu nubuso tût&emsp;<strong>vanila:</strong> <em>vanilla</em></p>
     <p>ûncoî&emsp;<strong>vanita:</strong> <em>vanity, pride, proud</em></p>
     <p>wôlik xîmu&emsp;<strong>vapo:</strong> <em>steam, vapor</em></p>
     <p>conwêbo&emsp;<strong>vare:</strong> <em>resource, wares, supply, merchandise, commodity</em></p>
@@ -1351,13 +1359,14 @@ common compounds that are used in day-to-day speech.
     <p>êto bêsu&emsp;<strong>vari³:</strong> <em>various</em></p>
     <p>kon kêxîk&emsp;<strong>vari⁴:</strong> <em>variation</em></p>
     <p>fenûo ûsên nîôk&emsp;<strong>vasanta:</strong> <em>spring (season)</em></p>
-<p>TBD&emsp;<strong>ve:</strong> <em>where</em></p>
+    <p>hoî&emsp;<strong>ve:</strong> <em>where</em></p>
     <p>wîlî&emsp;<strong>veka¹:</strong> <em>awake</em></p>
     <p>xe li êo wîlî&emsp;<strong>veka²:</strong> <em>wake</em></p>
     <p>kôxentê&emsp;<strong>veka³:</strong> <em>aware</em></p>
     <p>xe li nô tô woyû&emsp;<strong>vela:</strong> <em>sail</em></p>
     <p>hoî&emsp;<strong>ven:</strong> <em>when</em></p>
-<p>TBD&emsp;<strong>vende:</strong> <em>sell, sale</em></p>
+    <p>xe wedo oxon munî&emsp;<strong>vende¹:</strong> <em>sell</em></p>
+    <p>kon wedo munî&emsp;<strong>vende²:</strong> <em>sale</em></p>
     <p>fûkûxi&emsp;<strong>vendeta:</strong> <em>revenge, vengeful</em></p>
     <p>xe yosten fûkûxi&emsp;<strong>vendeta:</strong> <em>to seek revenge</em></p>
     <p>nozî&emsp;<strong>venemo¹:</strong> <em>venom, poison</em></p>
