add more Mini translations and fixes

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -365,7 +365,7 @@ common compounds that are used in day-to-day speech.
     <p>bîômu nomû&emsp;<strong>foreta:</strong> <em>forest</em></p>
     <p>xe kôs kûmun&emsp;<strong>fosi¹:</strong> <em>dig</em></p>
     <p>xe fîzî&emsp;<strong>fosi²:</strong> <em>bury</em></p>
-<p>TBD&emsp;<strong>fuji:</strong> <em>flee, escape, run away</em></p>
+    <p>xe uskîfo&emsp;<strong>fuji:</strong> <em>flee, escape, run away</em></p>
     <p>mûlû&emsp;<strong>fule:</strong> <em>full, to fill, whole</em></p>
     <p>wôlik&emsp;<strong>fume:</strong> <em>smoke</em></p>
     <p>xifon&emsp;<strong>fungi:</strong> <em>fungus, mold, mildew</em></p>
@@ -377,11 +377,11 @@ common compounds that are used in day-to-day speech.
     <p>gôlûo&emsp;<strong>fusi³:</strong> <em>melt</em></p>
     <p>boxô gos&emsp;<strong>gaden¹:</strong> <em>garden</em></p>
     <p>comen fîmôsyôs&emsp;<strong>gaden²:</strong> <em>a park</em></p>
-<p>TBD&emsp;<strong>gaden³:</strong> <em>recreation area</em></p>
+    <p>boxô kon sunyotnî&emsp;<strong>gaden³:</strong> <em>recreation area</em></p>
     <p>hûlû&emsp;<strong>gadi¹:</strong> <em>grass</em></p>
     <p>hôncôû&emsp;<strong>gadi²:</strong> <em>herb</em></p>
     <p>comen&emsp;<strong>gadi³:</strong> <em>lawn</em></p>
-<p>TBD&emsp;<strong>gama:</strong> <em>gram (SI)</em></p>
+    <p>kûsowî xokôn&emsp;<strong>gama:</strong> <em>gram (SI)</em></p>
     <p>xe li bîlûs&emsp;<strong>gana¹:</strong> <em>win</em></p>
     <p>xe li oksîôs&emsp;<strong>gana²:</strong> <em>earn</em></p>
     <p>xe dôstoc&emsp;<strong>gana³:</strong> <em>gain</em></p>
@@ -1001,15 +1001,18 @@ common compounds that are used in day-to-day speech.
     <p>(Place number words in the modifier slot)&emsp;<strong>ranko⁴:</strong> <em>-th (ordinal)</em></p>
     <p>hêlxun&emsp;<strong>rano:</strong> <em>early, too soon</em></p>
     <p>nêxôdî&emsp;<strong>rasa:</strong> <em>race, ethnicity, racial</em></p>
-<p>TBD&emsp;<strong>raso:</strong> <em>shave, scrape, graze</em></p>
+    <p>xe wêtû hoî fêlkonô yê okûlo&emsp;<strong>raso:</strong> <em>shave, scrape, graze</em></p>
     <p>hosoûn&emsp;<strong>ratio¹:</strong> <em>ratio, rate, proportion</em></p>
     <p>fun&emsp;<strong>ratio²:</strong> <em>fraction</em></p>
     <p>zuwobû&emsp;<strong>reaki¹:</strong> <em>answer, response</em></p>
     <p>tûu în zuwobû&emsp;<strong>reaki²:</strong> <em>reaction</em></p>
-<p>TBD&emsp;<strong>rebele:</strong> <em>rebel, rebellion, revolution, treason, rebellious</em></p>
-    <p>ondo&emsp;<strong>redi:</strong> <em>ready, prepare</em></p>
-    <p>în yôn&emsp;<strong>redi:</strong> <em>available</em></p>
-    <p>kon ondo&emsp;<strong>redi:</strong> <em>preparation</em></p>
+    <p>ônî ubôlni&emsp;<strong>rebele¹:</strong> <em>rebel</em></p>
+    <p>gûexo kon ubôlni&emsp;<strong>rebele²:</strong> <em>rebellion, revolution</em></p>
+    <p>tûu xe oxon îbolê&emsp;<strong>rebele³:</strong> <em>treason</em></p>
+    <p>ubôlni&emsp;<strong>rebele⁴:</strong> <em>rebellious</em></p>
+    <p>ondo&emsp;<strong>redi¹:</strong> <em>ready, prepare</em></p>
+    <p>în yôn&emsp;<strong>redi²:</strong> <em>available</em></p>
+    <p>kon ondo&emsp;<strong>redi³:</strong> <em>preparation</em></p>
 <p>TBD&emsp;<strong>refere:</strong> <em>refer to, reference, mention, allusion</em></p>
     <p>hûzon&emsp;<strong>regen:</strong> <em>rain</em></p>
     <p>xe hûkun&emsp;<strong>regula¹:</strong> <em>regulate, control</em></p>
@@ -1017,8 +1020,8 @@ common compounds that are used in day-to-day speech.
     <p>yôn yê kon dûstu yê kîldo&emsp;<strong>regula³:</strong> <em>ruler (tool)</em></p>
     <p>fûtsûn&emsp;<strong>regula⁴:</strong> <em>a rule</em></p>
     <p>sotnîn&emsp;<strong>reka:</strong> <em>right (direction)</em></p>
-    <p>kîskô&emsp;<strong>rela:</strong> <em>rail, bar</em></p>
-    <p>oûtô kîskô&emsp;<strong>rela:</strong> <em>train</em></p>
+    <p>kîskô&emsp;<strong>rela¹:</strong> <em>rail, bar</em></p>
+    <p>oûtô kîskô&emsp;<strong>rela²:</strong> <em>train</em></p>
     <p>xe li lîtiwe&emsp;<strong>relate¹:</strong> <em>relate</em></p>
     <p>umo lîtiwe&emsp;<strong>relate²:</strong> <em>relation</em></p>
     <p>êtsô yê lîtiwe&emsp;<strong>relate³:</strong> <em>relationship</em></p>
@@ -1028,12 +1031,12 @@ common compounds that are used in day-to-day speech.
 <p>TBD&emsp;<strong>remo:</strong> <em>oar, rudder, to row</em></p>
 <p>TBD&emsp;<strong>rena:</strong> <em>kidney</em></p>
     <p>munyufo&emsp;<strong>renta:</strong> <em>rent, borrow</em></p>
-    <p>nô xûto&emsp;<strong>reo:</strong> <em>flow, current</em></p>
-    <p>konwo&emsp;<strong>reo:</strong> <em>rhythm</em></p>
-    <p>cêô kon hûkun&emsp;<strong>reo:</strong> <em>influence</em></p>
-    <p>xîûfû&emsp;<strong>repare:</strong> <em>fix, repair, mend</em></p>
-    <p>kon dûndon&emsp;<strong>repare:</strong> <em>correction</em></p>
-    <p>kon yôûlî&emsp;<strong>repare:</strong> <em>improvement</em></p>
+    <p>nô xûto&emsp;<strong>reo¹:</strong> <em>flow, current</em></p>
+    <p>konwo&emsp;<strong>reo²:</strong> <em>rhythm</em></p>
+    <p>cêô kon hûkun&emsp;<strong>reo³:</strong> <em>influence</em></p>
+    <p>xîûfû&emsp;<strong>repare¹:</strong> <em>fix, repair, mend</em></p>
+    <p>kon dûndon&emsp;<strong>repare²:</strong> <em>correction</em></p>
+    <p>kon yôûlî&emsp;<strong>repare³:</strong> <em>improvement</em></p>
     <p>kûôcyo umo&emsp;<strong>repubika¹:</strong> <em>republic, republican</em></p>
     <p>ônî îmon yê kûôcyo umo&emsp;<strong>repubika²:</strong> <em>republican</em></p>
     <p>bûlûsî&emsp;<strong>retili¹:</strong> <em>reptile</em></p>
