fix for old word usage

--- a/docs/language/word_types/modifiers.mdx
+++ b/docs/language/word_types/modifiers.mdx
@@ -67,7 +67,7 @@ Converting from the other content types into modifiers.
 When a noun acts as a modifier, it means that the head word is somehow related
 to the noun (acting as a modifer) or shares some recognizable quality with the
 noun. Like the affix "-like" in English. One way of making a modifier out of a
-noun is to provide it as a word immediately following <HisyeoWord is="fin"/>.
+noun is to provide it as a word immediately following <HisyeoWord is="uyo"/>.
 This has the effect of meaning "[noun]-like thing" in English. You can use it
 following any head noun or existing modifier chain (within a genitive phrase).
 
