--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -246,11 +246,11 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 2. ✅ Directed at; intended to belong to.
 <HisyeoTabs>
-  <p>noyo yûnyoû fin oxon nîmû&emsp;<em>I have something for you.</em></p>
+  <p>noyo yûnyoû uyo oxon nîmû&emsp;<em>I have something for you.</em></p>
 </HisyeoTabs>
 3. ✅ In order to help, benefit, gratify, honor etc. (someone or something). 
 <HisyeoTabs>
-  <p>hôn môî fin fos noyo tûu, û noyo tûu oxon nîmû.&emsp;<em>Everything I do, I do for you.</em></p>
+  <p>hôn môî uyo fos noyo tûu, û noyo tûu oxon nîmû.&emsp;<em>Everything I do, I do for you.</em></p>
   <p>nûs yûnyoû kôndodû yê lono kon lôzîc oxon umo Zêenit.&emsp;<em>We're having a birthday party for Janet.</em></p>
   <p>ônî bôklôn cûdo sî kôto in ondo oxon kôndodû kon cûdo yôûlî.&emsp;<em>The mayor gave a speech for the charity gala.</em></p>
 </HisyeoTabs>
@@ -343,7 +343,7 @@ proper way to formulate the desired semantic meaning.
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
-  <p>tûu kon dodê tô woyû in besol nu. hôn kut fin û noyo kôî dodê yôk lôîcôk.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
+  <p>tûu kon dodê tô woyû in besol nu. hôn kut uyo û noyo kôî dodê yôk lôîcôk.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
   <p>hôn dîzel nûs yûnyoû yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
@@ -589,8 +589,8 @@ case term accurately reflects the functionality in Hîsyêô. So, the term
 <HisyeoTabs>
   <p>xoînbo dêko û loi misli siskin loi.&emsp;<em>"He looks like his brother."</em></p>
   <p>sî tûu cô kûnhîun lôc û umo moskûl nokdo misli xe ke zîgîl.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
-  <p>golfon onô fos noyo oncêmon ni cihôû xe dêko non foko ôsôlê yê kônyêc wêxôn fêlcîn misli yôk ozûul fin fos noyo oncêmon sî hoî ôhêl.&emsp;<em>The disgust I felt after watching last weekend's horror movie was unlike anything I had felt before.</em></p>
-  <p>umo Kiloûdîo bi xûnyu cokyen îskô fin cûbû misli yôk umo Filit fos poxô kon îskô cûbû bi cokyen li niwos dûî yê.&emsp;<em>Claudia hardly ever drinks beer or wine, unlike Phillip, for whom the bar is practically a second home.</em></p>
+  <p>golfon onô fos noyo oncêmon ni cihôû xe dêko non foko ôsôlê yê kônyêc wêxôn fêlcîn misli yôk ozûul uyo fos noyo oncêmon sî hoî ôhêl.&emsp;<em>The disgust I felt after watching last weekend's horror movie was unlike anything I had felt before.</em></p>
+  <p>umo Kiloûdîo bi xûnyu cokyen îskô uyo cûbû misli yôk umo Filit fos poxô kon îskô cûbû bi cokyen li niwos dûî yê.&emsp;<em>Claudia hardly ever drinks beer or wine, unlike Phillip, for whom the bar is practically a second home.</em></p>
   <p>xe li mûun, misli yôk nîo&emsp;<em>Being late is unlike him.</em></p>
 </HisyeoTabs>
 
