--- a/docs/language/word_types/verbs.mdx
+++ b/docs/language/word_types/verbs.mdx
@@ -82,7 +82,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo kôî li nô mût kôndodû onô lêkin noyo gôcîdon sî yôk bi ôhêl.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo kôî li gô hoî sityo kûldû lêkin noyo bi môcîbo fôlun fos wêîlun mût noyo misli umo wohî.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
     <p>noyo kôî gomî bîek botuk sûît fêlcîn.&emsp;<em>Might I take the last biscuit?</em></p>
-    <p>nûs kôî buswen fin xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>nûs kôî buswen uyo xe li len eswen yoûtî cî.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nîmû kôî tenkîn ulyô ko.&emsp;<em>Can you hear that?</em></p>
     <p>nîo kôî kôto tô hîskûnco Ingulic, Vulonsê, ûn Dôic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
