--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -165,10 +165,10 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>mût tîmîok nûs somo tîmîok Zekô.&emsp;<em>Our bird's name is Jacko.</em></p>
 <p>xûto onô fisun tîton onô mût xômûtlô.&emsp;<em>The river knows the way to the sea.</em></p>
 <p>oûtô xîmu li nô bi cok misli tîmîok xîkô.&emsp;<em>The boat sails away, like a bird on the wing.</em></p>
-<p>nîo dêko sî bi êto dîyondê hoî môî ûnhilun lêkin dêko yôk fin.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
+<p>nîo dêko sî bi êto dîyondê hoî môî ûnhilun lêkin dêko yôk uyo.&emsp;<em>They looked cautiously about, but saw nothing.</em></p>
 <p>niwos cûtî yûnyoû sî niswî kûncîen xe li kûncîen kon sityo li kûncîen kon conzodo li kûncîen kon côûfon yê cûtî êto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
 <p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
-<p>nûs bêûdo fin nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
+<p>nûs bêûdo uyo nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
 <p>socok gubuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
 <p>nîmû yosten sî odigon cênbô yê mônbili ko.&emsp;<em>Did you find the distance too great?</em></p>
 <p>kûu li fîkî noî umo xonluk.&emsp;<em>Hurry, children.</em></p>
@@ -178,11 +178,11 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>kûu kôto yogô fêlcîn yê kîso ulyô bi dîzel.&emsp;<em>Tell the last part of that story again.</em></p>
 <p>kûu li fîkî yodo û nîmû ke li odigon mûun.&emsp;<em>Be quick or you will be too late.</em></p>
 <p>nîmû ke li nô ofek nûs ko yodo motsi hoî ôfo ko.&emsp;<em>Will you go with us or wait here?</em></p>
-<p>nîo bi môî wokût ôntôn fin yê êtsô lôc et fos bi sodolun ôlê ni li sî êo funlît hoî dînzoû, ûn hoî lono cunyû li yôk lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
+<p>nîo bi môî wokût ôntôn uyo yê êtsô lôc et fos bi sodolun ôlê ni li sî êo funlît hoî dînzoû, ûn hoî lono cunyû li yôk lohot.&emsp;<em>She was always, shabby, often ragged, and on cold days very uncomfortable.</em></p>
 <p>kûu gonîso bi kut bînê kûu tûu.&emsp;<em>Think first and then act.</em></p>
 <p>noyo li sî totsi misli mûxî cûtî yê umo wohî xonluk hoî sityo xe li uklo mût kûmun obokî, ûn dêko sî bôlfêlê xîmu bukû zîgîl.&emsp;<em>I stood, a little mite of a girl, upon a chair by the window, and watched the falling snowflakes.</em></p>
 <p>mût monodo onô kûu mônîso bêîku ôfo noî mênyûu noyo ûn mût nîo kûu kôto itihos gonzîl ni.&emsp;<em>Show the guests these shells, my son, and tell them their strange history.</em></p>
-<p>kûu li xowosê hôn xûnyu fin lêkin hôn xôn môî nîmû.&emsp;<em>Be satisfied with nothing but your best.</em></p>
+<p>kûu li xowosê hôn xûnyu uyo lêkin hôn xôn môî nîmû.&emsp;<em>Be satisfied with nothing but your best.</em></p>
 <p>nûs gonîso nîo misli sûtûô côûnton nûs.&emsp;<em>We consider them our faithful friends.</em></p>
 <p>nûs ôlê boxô ôfo ke li êo niwos nûs.&emsp;<em>We will make this place our home.</em></p>
 <p>cûî nomû onô ôlê niwos nîo li êo tût ûn lohot tô fôdoloc nulun ûn woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
@@ -197,7 +197,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>û ôntôn yê mênyûu wohî cûtî yê hondon kon hûkun li fos mût ni zohît sî înbolî xe li înbolî centik yê kûôcyo.&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
 <p>nîo ôntôn sî ôntôn wîk hûnsik xe li ostok onô yê fôlnî.&emsp;<em>They wore red caps, the symbol of liberty.</em></p>
 <p>ofek nîo xe misli foko mefûs nûs, nûs li yôk ôsôlê yê bongôsî.&emsp;<em>With him as our protector, we fear no danger.</em></p>
-<p>môî fin moxo nîo xe li bolce kûmun li lîsto li towê, li fos bi cîes wêko sî ni hoî dibo.&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
+<p>môî uyo moxo nîo xe li bolce kûmun li lîsto li towê, li fos bi cîes wêko sî ni hoî dibo.&emsp;<em>All her finery, lace, ribbons, and feathers, was packed away in a trunk.</em></p>
 <p>li sî xoînbo û fos nîo wohî li hulûkô, oldis gonîso yê nîo moskûl misli towê tîmîok.&emsp;<em>Light he thought her, like a feather.</em></p>
 <p>hôn xokôn yogô ûsên nîôk ûn yogô ûsên kon kudûdo û mênyûu yê siskin motûo et nûs cifû kon monodo kîldo mût nûs.&emsp;<em>Every spring and fall our cousins pay us a long visit.</em></p>
 <p>hoî bîômu kêlôs nûs û hûlû onô bi môcîbo li lûntî hôn yogô ûsên cunyû.&emsp;<em>In our climate the grass remains green all winter.</em></p>
