--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -344,7 +344,7 @@ proper way to formulate the desired semantic meaning.
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
   <p>tûu kon dodê tô woyû in besol nu. hôn kut uyo û noyo kôî dodê yôk lôîcôk.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
-  <p>hôn dîzel nûs yûnyoû yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
+  <p>hôn dîzel û nûs yûnyoû yôk ozûul yôn.&emsp;<em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
 <HisyeoTabs>
